Recipe html content v1 complete
first edition of the content created
for butter chicken recipe

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -7,6 +7,47 @@
   </head>
   <body>
     <h1>Butter Chicken Recipe</h1>
-    <img src="../img/butter-chicken.jpg" alt="Butter chicken curry in a white bowl on a grey table" width="300px" height="auto">
+    <img src="../img/butter-chicken.jpg" alt="Butter chicken curry in a white bowl on a grey table" width="400px" height="auto">
+    <h2>Description</h2>
+    <p>Butter Chicken is a lovely mild indian curry that is made in two parts, tandoori chicken with a rich, buttery sauce.</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>3 tbsp lemon juice</li>
+      <li>2-3 tbsp kashmiri chili powder</li>
+      <li>4 skinless chicken breasts</li>
+      <li>3 tbsp melted butter or ghee</li>
+      <li>200ml plain yogurt</li>
+      <li>1 tbsp crushed garlic</li>
+      <li>1 tbsp finely grated ginger</li>
+      <li>2 tbsp ground coriander</li>
+      <li>2 tbsp ground cumin</li>
+      <li>2 tsp amchoor powder</li>
+      <li>1 tbsp dried fenugreek leaves</li>
+      <li>1 tbsp dried mint leaves</li>
+      <li>1 tsp plain salt</li>
+      <li>3 tbsp vegetable oil</li>
+      <li>1 tsp cumin seeds</li>
+      <li>4-8 hot green chillies</li>
+      <li>90g butter or ghee</li>
+      <li>2 medium onions</li>
+      <li>4 green cardamom pods</li>
+      <li>½ tbsp crushed garlic</li>
+      <li>½ tbsp grated ginger</li>
+      <li>1 tsp ground turmeric</li>
+      <li>2 tsp dried fenugreek leaves</li>
+      <li>500ml passata</li>
+      <li>2 tsp garam masala</li>
+      <li>100ml single cream</li>
+      <li>large pinch of coriander</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+      <li>Rub the lemon juice and chilli powder or paprika into the chicken with a pinch of salt, then chill for 1 hr. Mix all the marinade ingredients together in a bowl, taste for seasoning, then add the chilled chicken. Mix well and chill for another 2 hrs.</li>
+      <li>Thread the marinated chicken pieces onto metal skewers, reserving any leftover marinade. Grill over a hot barbecue for 5 mins, turning occasionally and basting with the melted butter or ghee. Alternatively, cook under a hot grill for 8-10 mins, turning occasionally. Don't worry if the chicken is a little under cooked, as it will finish cooking in the sauce. Remove the skewers to a board.</li>
+      <li>To make the sauce, heat 2 tbsp vegetable oil in a wok or large frying pan and drop in a few cumin seeds. When they start sizzling, tip in the rest of the seeds. Swirl the pan, reduce the heat and add the green chillies. Stir once or twice until the skins of the chillies have blistered, then add the butter or ghee. Turn the heat up to high and continue to cook until all the butter or ghee has melted. Tip in the onions and fry for 10 mins until the onions are light brown and soft. If you prefer a smooth sauce, tip the mixture into a blender and blitz until smooth. Alternatively, scrape into a bowl and set aside.</li>
+      <li>Wipe the pan clean with kitchen paper and heat the remaining oil. Drop in the crushed cardamom pods. When they have swelled and lightened in colour, reduce the heat, add the garlic and ginger and fry for 30 seconds, stirring continuously until you can no longer smell raw garlic and ginger. Return the cooked onion mixture to the pan and mix well. Add the turmeric and half the fenugreek leaves. Season with salt. Taste and adjust the seasoning if needed – if you like, you can add some chilli powder. Pour in the diluted passata, mix well and bring to the boil. Reduce the heat to a simmer and cook, covered and stirring occasionally, for around 20 mins. Oil will eventually rise to the surface when the sauce is cooked.</li>
+      <li>Remove the chicken pieces from the skewers and chop into bite-sized pieces. Add these to the sauce along with any resting juices. Tip about 125ml warm water into the bowl with the reserved marinade, swirl to loosen, then stir into the sauce. Bring the sauce to the boil and reduce the heat to a simmer. Sprinkle over with garam masala and continue to cook for 3-4 minutes, or until chicken is cooked through. If you like, add a splash of boiling water to loosen the sauce, then taste for seasoning. Pour in half the cream and mix well.</li>
+      <li>Transfer the butter chicken to a serving bowl, drizzle over the remaining cream, sprinkle with the remaining fenugreek leaves and garnish with the fresh coriander leaves.</li>
+    </ol>
   </body>
 </html>
