recipe page created and links added to/from index
lamb bunha recipe page created with boilerplate
and links created from index to all other pages
link also added from butter chicken page to index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/butter-chicken.html">Butter Chicken</a>
+    <ul>
+      <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+      <li><a href="./recipes/lamb-bhuna.html">Lamb Bhuna</a></li>
+      <li><a href="./recipes/chicken-biryani.html">Chicken Biryani</a></li>
+    </ul>
   </body>
 </html>
