--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -49,5 +49,6 @@
       <li>Remove the chicken pieces from the skewers and chop into bite-sized pieces. Add these to the sauce along with any resting juices. Tip about 125ml warm water into the bowl with the reserved marinade, swirl to loosen, then stir into the sauce. Bring the sauce to the boil and reduce the heat to a simmer. Sprinkle over with garam masala and continue to cook for 3-4 minutes, or until chicken is cooked through. If you like, add a splash of boiling water to loosen the sauce, then taste for seasoning. Pour in half the cream and mix well.</li>
       <li>Transfer the butter chicken to a serving bowl, drizzle over the remaining cream, sprinkle with the remaining fenugreek leaves and garnish with the fresh coriander leaves.</li>
     </ol>
+    <a href="../index.html">Go To Home</a>
   </body>
 </html>
