All page boilerplates created and linked
Lamb bhuna recipe page created with boilerplate
chicken biryani page created with boilerplate
butter chicken page updated with correct links
index html links correctly to all pages

--- a/recipes/chicken-biryani.html
+++ b/recipes/chicken-biryani.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lamb Bhuna Recipe</title>
+    <title>Chicken Biryani Recipe</title>
   </head>
   <body>
-    <h1>Lamb Bhuna Recipe</h1>
-    <img src="../img/lamb-bhuna.jpg" alt="" width="400px" height="auto">
+    <h1>Chicken Biryani Recipe</h1>
     <h2>Description</h2>
-    <p>Lamb Bhuna is an outstanding slow cooked curry that is mild but flavorful.</p>
+    <p>Chicken Biryani is a great one-pot rice dish that still tastes great the next day.</p>
     <h3>Ingredients</h3>
     <ul>
+      <li></li>
       <li></li>
       <li></li>
       <li></li>
@@ -21,6 +21,8 @@
     </ul>
     <h4>Steps</h4>
     <ol>
+      <li></li>
+      <li></li>
       <li></li>
       <li></li>
       <li></li>
