Lamb bhuna page complete v1

--- a/recipes/lamb-bhuna.html
+++ b/recipes/lamb-bhuna.html
@@ -12,19 +12,29 @@
     <p>Lamb Bhuna is an outstanding slow cooked curry that is mild but flavorful.</p>
     <h3>Ingredients</h3>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>600g lamb</li>
+      <li>6 garlic cloves</li>
+      <li>thumb-sized piece of ginger</li>
+      <li>2 tbsp malt vinegar</li>
+      <li>½ tsp ground cinnamon</li>
+      <li>4 tbsp sunflower oil</li>
+      <li>2 onions</li>
+      <li>10 curry leaves</li>
+      <li>2 dried chillies</li>
+      <li>1 tsp cumin seeds</li>
+      <li>1 tsp mustard seeds</li>
+      <li>1 tsp ground coriander</li>
+      <li>½ tsp fenugreek seeds</li>
+      <li>1 tbsp tomato purée</li>
+      <li>400g can chopped tomatoes</li>
+      <li>1 tsp garam masala</li>
     </ul>
     <h4>Steps</h4>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>To make the marinade, combine the ingredients with a large pinch of salt in a large bowl. Toss in the lamb, cover and marinate for 1 hr at room temperature, or chill overnight.</li>
+      <li>For the sauce, heat the oil in a flameproof casserole and fry the onions for 10 mins, stirring until soft and golden. Drizzle in more oil if the pan gets dry. Add the curry leaves and chillies and fry for a few minutes, then add the spices and cook for 5 mins more until the onions start to caramelise.</li>
+      <li>Tip in the lamb along with the marinade and turn the heat to high. Cook, stirring, for 5 mins until the lamb browns. Add the tomato purée and cook for 1 min, then stir in the tomatoes and 100ml water. Bring to a simmer, reduce the heat, cover and cook, stirring now and then, for 1 hr 20 mins until the lamb is tender.</li>
+      <li>Uncover and cook for 8-10 mins more until the sauce has reduced and thickened. Remove from the heat, stir in the garam marsala and season.</li>
     </ol>
     <a href="../index.html">Go To Home</a>
   </body>
