--- a/recipes/chicken-biryani.html
+++ b/recipes/chicken-biryani.html
@@ -7,26 +7,32 @@
   </head>
   <body>
     <h1>Chicken Biryani Recipe</h1>
+    <img src="../img/chicken-biryani.jpg" alt="Chicken biryani in a metal dish with a bowl of vegetabnle curry on the side" width="400px" height="auto">
     <h2>Description</h2>
     <p>Chicken Biryani is a great one-pot rice dish that still tastes great the next day.</p>
     <h3>Ingredients</h3>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>300g basmati rice</li>
+      <li>25g butter</li>
+      <li>1 large onion</li>
+      <li>1 bay leaf</li>
+      <li>3 cardamom pods</li>
+      <li>small cinnamon stick</li>
+      <li>1 tsp turmeric</li>
+      <li>4 skinless chicken breasts</li>
+      <li>4 tbsp balti curry paste</li>
+      <li>85g raisins</li>
+      <li>850ml chicken stock</li>
+      <li>30g coriander</li>
     </ul>
     <h4>Steps</h4>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Soak 300g basmati rice in warm water, then wash in cold until the water runs clear.</li>
+      <li>Heat 25g butter in a saucepan and cook 1 finely sliced large onion with 1 bay leaf, 3 cardamom pods and 1 small cinnamon stick for 10 mins.</li>
+      <li>Sprinkle in 1 tsp turmeric, then add 4 chicken breasts, cut into large chunks, and 4 tbsp curry paste. Cook until aromatic.</li>
+      <li>Stir the rice into the pan with 85g raisins, then pour over 850ml chicken stock.</li>
+      <li>Place a tight-fitting lid on the pan and bring to a hard boil, then lower the heat to a minimum and cook the rice for another 5 mins.</li>
+      <li>Turn off the heat and leave for 10 mins. Stir well, mixing through 15g chopped coriander. To serve, scatter over the leaves of the remaining 15g coriander and 2 tbsp toasted almonds.</li>
     </ol>
     <a href="../index.html">Go To Home</a>
   </body>
